# esp32s3_project

./: CMakeLists.txt  README.md  partitions-16MB.csv
components/BSP/: CMakeLists.txt
components/BSP/AT24C02/: bsp_at24c02.c  bsp_at24c02.h
components/BSP/IIC/: bsp_iic.c  bsp_iic.h
components/BSP/XL9555/: bsp_xl9555.c  bsp_xl9555.h
main/: idf_component.yml  main.c
